# energeticka-komunita-bilance

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  app.js  create-webui.ps1  old_index.html  package-lock.json  pristine_index.html  pyproject.toml
.github/workflows/: ci.yml  sync-webui-to-docs.yml
_ci_out/: bat_central_meta.csv
_ci_out/csv/: allocations.csv  bat_local_by_site_hour.csv  by_hour_after.csv  by_hour_after_bat_central.csv  by_hour_after_bat_local.csv  by_site_after.csv  central_econ_best.csv  central_sensitivity.csv  eand_after_pv.csv  exp_wide.csv  imp_wide.csv  local_selfcons.csv
backup_epc_504889908/: docs_index.html  docs_style.css  webui_app.js  webui_index.html
docs/: app.js  build-info.json  config.js  index.html  style.css  toggles.js
examples/: config.ci.yaml  config.yaml  sample_input.csv
examples/minidataset/: eano_after_pv.csv  kwp_by_site.csv  local_selfcons.csv
scripts/: _README.md
src/ec_balance/: cli.py
src/ec_balance/pipeline/: step1_wide_to_long.py  step1_wide_to_long.py.bak  step2_local_pv.py  step2_local_pv.py.bak  step3_sharing.py  (+13 more)
tests/: test_smoke.py
tools/: add_pyyaml_dep.py  add_spdx_headers.py  config.py  enable_config_cli.py  fix_imports.py  fix_pyproject_dependencies.py  fix_step4b_econ_override.py  patch_outdir_csv.py  patch_step1_normalize.py  patch_step4b_metrics.py  patch_step4b_metrics_v2.py  precommit_check.py  price-line-block.js  replace_step4b_batt_econ_clean.py
webui/: app.js  build-info.js  config.js  index.html  style.css  toggles.js
(+4 files in other folders)
