[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ec-balance"
version = "0.2.0"
description = "Výpočet energetické bilance pro energetické komunity"
readme = "README.md"
authors = [{ name = "Kuba" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pydantic>=2.8",
  "click>=8.1",
  "XlsxWriter>=3.2",
  "PyYAML>=6"
]

[project.scripts]
ecb = "ec_balance.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "black>=24.0", "mypy>=1.10", "pre-commit>=3.8", "numpy-financial>=1.0"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
